--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to OpenShift - Modifed</title>
+  <title>Welcome to OpenShift - Modifed 2nd Time</title>
 
 
 <style>
@@ -219,7 +219,7 @@ pre {
         <div class="row">
           <section class='col-xs-12 col-sm-6 col-md-6'>
             <section>
-              <h2>How to use this example application</h2>
+              <h2>How to use this example application- Read the details to use this sample.</h2>
                 <p>For instructions on how to use this application with OpenShift, start by reading the <a href="http://docs.openshift.org/latest/dev_guide/templates.html#using-the-quickstart-templates">Developer Guide</a>.</p>
 
               <h2>Deploying code changes</h2>
