--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>This is a demo session on OpenShift automated build process.</h1>
+            <h1>This is a demo session on OpenShift automated build process - Add a change to this file.</h1>
           </hgroup>
 
 
